<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="160dp"
        android:src="@drawable/logo_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:id="@+id/et_email_outline"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginHorizontal="32dp"-->
<!--        android:hint="@string/email_hint"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/imageView">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/et_email"-->
<!--            android:inputType="textEmailAddress"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_email_outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.giftech.instagramclone.core.ui.MyEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.giftech.instagramclone.core.ui.MyEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/et_email_outline" />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_btn_blue"
        android:text="Log In"
        android:textAllCaps="false"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <View
        android:id="@+id/line_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/container_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/container_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:text="Don't have an account?"/>

        <TextView
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up."
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>